# cmakeprj

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  my_ci.yml  myci.yml  test.ps1  windows.yml
codes/: CMakeLists.txt
codes/app/src/: app.cpp
